--- a/index.html
+++ b/index.html
@@ -7,171 +7,152 @@
   <link rel="icon" href="favicon.png" type="image/png" />
   <style>
     @font-face {
-      font-family: 'TiemposText';
+      font-family: 'Tiempos';
       src: url('TiemposText-Regular.otf') format('opentype');
     }
-
     @font-face {
-      font-family: 'HelveticaMono';
+      font-family: 'Mono';
       src: url('HelveticaMonospacedPro-Rg.otf') format('opentype');
     }
-
     body {
       margin: 0;
+      padding: 0;
       background-color: #F0EDE6;
-      font-family: 'HelveticaMono', monospace;
+      color: black;
+      font-family: 'Mono', monospace;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       min-height: 100vh;
-      padding: 40px 20px;
-      box-sizing: border-box;
-    }
-
-    .top-content {
       text-align: center;
-      line-height: 1.4;
     }
-
-    .top-content .heading {
-      font-family: 'TiemposText', serif;
+    .top {
+      padding-top: 40px;
+    }
+    .headline {
+      font-family: 'Tiempos', serif;
       font-size: 24px;
-      margin: 60px 0 30px;
+      margin: 40px 0 20px;
     }
-
     .date-line {
-      margin-top: 30px;
-      font-family: 'HelveticaMono', monospace;
-      font-size: 16px;
-    }
-
-    form {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
       margin-top: 20px;
+      font-size: 14px;
+      letter-spacing: 1px;
     }
-
+    form {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      margin-top: 20px;
+      font-size: 16px;
+    }
     input[type="email"] {
-      font-family: 'HelveticaMono', monospace;
-      font-size: 16px;
+      font-family: 'Mono', monospace;
+      background-color: transparent;
       border: none;
-      background: none;
       border-bottom: 2px dashed black;
-      outline: none;
-      width: 240px;
-      text-align: center;
-      padding: 4px 0;
-      color: black;
-    }
-
-    button {
-      font-family: 'HelveticaMono', monospace;
       font-size: 16px;
-      background: black;
-      color: white;
-      border: none;
-      padding: 6px 12px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:disabled {
-      opacity: 0.5;
-      cursor: default;
-    }
-
-    #legal {
-      font-size: 10px;
+      padding: 4px;
       text-align: center;
-      max-width: 260px;
-      margin: 20px auto 0;
-      font-family: 'HelveticaMono', monospace;
+      outline: none;
+      width: 220px;
+    }
+    input::placeholder {
+      color: black;
+      opacity: 1;
+    }
+    button {
+      font-family: 'Mono', monospace;
+      font-size: 16px;
+      background-color: transparent;
+      border: 1px solid black;
+      color: black;
+      padding: 4px 12px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .legal {
+      font-size: 10px;
+      max-width: 300px;
+      margin: 12px auto 0;
       opacity: 0;
       transition: opacity 1s ease;
     }
-
-    #legal a {
+    .legal a {
       color: black;
       text-decoration: underline;
     }
-
     .flower {
-      width: 100px;
-      margin: 40px auto 0;
-    }
-
-    @media (min-width: 600px) {
-      .flower {
-        width: 120px;
-      }
-    }
-
-    @media (min-width: 900px) {
-      .flower {
-        width: 140px;
-      }
+      width: 80px;
+      margin: 40px auto;
     }
   </style>
 </head>
 <body>
-  <div class="top-content">
-    <div>17 &nbsp;&nbsp;&nbsp; 06 &nbsp;&nbsp;&nbsp; 25</div>
+  <div class="top">
+    <div>17 &nbsp;&nbsp;&nbsp;&nbsp; 06 &nbsp;&nbsp;&nbsp;&nbsp; 25</div>
     <div>ABBY.WORLD</div>
     <div>7 RUE DE LA CALADE</div>
     <div>CANNES</div>
 
-    <div class="heading">ABBY.WORLD Cannes 2025</div>
+    <div class="headline">ABBY.WORLD Cannes 2025</div>
     <div class="date-line">TUESDAY–WEDNESDAY</div>
 
     <form id="signup-form" action="https://formspree.io/f/xldjayre" method="POST">
-      <input type="email" name="email" id="email-input" placeholder=" " required />
-      <button type="submit" id="submit-button">SIGN UP</button>
+      <input type="email" name="email" placeholder="SIGN UP" required />
+      <button type="submit" id="submit-btn">SIGN UP</button>
     </form>
 
-    <div id="legal">
+    <div id="legal" class="legal">
       By submitting this form, you consent to us processing your personal data to send you information about the event.
       We will not keep your data longer than necessary.
       <a href="https://docs.google.com/document/d/1Dte-DqgnydV6A6dxK7Ldg7Wn774N0YIbEcEmPN4XQq8/edit?usp=sharing" target="_blank">Learn more here</a>.
     </div>
   </div>
 
-  <img src="Abby_flower.png" alt="Flower" class="flower" />
+  <img src="Abby_flower.png" alt="Abby Flower" class="flower" />
 
   <script>
-    const emailInput = document.getElementById('email-input');
-    const submitButton = document.getElementById('submit-button');
-    const legalText = document.getElementById('legal');
-    const form = document.getElementById('signup-form');
+    const form = document.getElementById("signup-form");
+    const emailInput = form.querySelector('input[type="email"]');
+    const button = document.getElementById("submit-btn");
+    const legal = document.getElementById("legal");
 
-    emailInput.addEventListener('focus', () => {
-      legalText.style.opacity = 1;
+    emailInput.addEventListener("focus", () => {
+      legal.style.opacity = 1;
     });
 
-    form.addEventListener('submit', function (e) {
+    form.addEventListener("submit", async function (e) {
       e.preventDefault();
+      const data = new FormData(form);
 
-      const formData = new FormData(form);
-      fetch(form.action, {
-        method: 'POST',
-        body: formData,
-        headers: { 'Accept': 'application/json' }
-      })
-      .then(response => {
+      try {
+        const response = await fetch(form.action, {
+          method: "POST",
+          body: data,
+          headers: {
+            'Accept': 'application/json'
+          }
+        });
+
         if (response.ok) {
-          submitButton.innerText = 'THANK YOU';
-          submitButton.disabled = true;
+          button.textContent = "THANK YOU";
+          legal.style.opacity = 0;
           setTimeout(() => {
-            legalText.style.opacity = 0;
+            emailInput.value = "";
+            button.textContent = "SIGN UP";
+            button.style.backgroundColor = "transparent";
+            button.style.color = "black";
+            button.style.border = "1px solid black";
+            emailInput.placeholder = "SIGN UP";
           }, 2000);
         } else {
-          alert("There was a problem. Please try again.");
+          button.textContent = "ERROR";
         }
-      })
-      .catch(() => {
-        alert("There was a problem. Please try again.");
-      });
+      } catch (error) {
+        console.error("Submit error:", error);
+        button.textContent = "ERROR";
+      }
     });
   </script>
 </body>
