--- a/index.html
+++ b/index.html
@@ -2,90 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ABBY.WORLD Cannes 2025</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <style>
-    @font-face {
-      font-family: 'TiemposText';
-      src: url('TiemposText-Regular.otf') format('opentype');
-    }
-    @font-face {
-      font-family: 'HelveticaMono';
-      src: url('HelveticaMonospacedPro-Rg.otf') format('opentype');
+    :root {
+      --input-line-width: 180px;
     }
 
     body {
       margin: 0;
+      padding: 0;
       background-color: #F0EDE6;
-      font-family: 'HelveticaMono', monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      height: 100vh;
-      text-align: center;
+      font-family: 'Helvetica Monospaced Pro', monospace;
+      overflow: hidden;
     }
 
-    .top-section {
-      margin-top: 40px;
-      line-height: 1.5;
-      font-size: 16px;
-    }
-
-    .title {
-      font-family: 'TiemposText', serif;
-      font-size: 24px;
-      margin: 40px 0 20px;
-    }
-
-    .time-slot {
-      margin: 0;
-      font-size: 16px;
+    #form-wrapper {
+      position: fixed;
+      top: 8vh;
+      left: 5vw;
+      z-index: 10;
     }
 
     form {
       display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 10px;
+      flex-direction: column;
+      align-items: flex-start;
     }
 
-    .input-line {
+    .input-wrapper {
+      position: relative;
+      width: var(--input-line-width);
+      border-bottom: 1px dashed black;
+    }
+
+    input[type="email"] {
+      width: 100%;
+      background: none;
       border: none;
-      border-bottom: 2px dashed black;
-      background: transparent;
-      font-family: 'HelveticaMono', monospace;
-      font-size: 16px;
       color: black;
+      font-family: 'Helvetica Monospaced Pro', monospace;
+      font-size: 11px;
+      padding: 4px 0;
       outline: none;
-      width: 200px; /* <-- Justera längden här */
-      text-align: center;
     }
 
-    .signup-button {
+    button {
+      margin-top: 8px;
+      background: none;
       border: 1px solid black;
-      background-color: transparent;
       color: black;
-      padding: 5px 12px;
-      font-family: 'HelveticaMono', monospace;
-      font-size: 16px;
+      font-family: 'Tiempos Text', serif;
+      font-size: 12px;
+      padding: 4px 16px;
       cursor: pointer;
       transition: all 0.3s ease;
     }
 
-    .signup-button.sent {
-      background-color: black;
+    button.active {
+      background: black;
       color: #F0EDE6;
       border: none;
     }
 
     #legal {
-      font-size: 10px;
-      max-width: 260px;
+      font-family: 'Helvetica Monospaced Pro', monospace;
+      font-size: 9px;
+      color: black;
       margin-top: 10px;
-      opacity: 1;
+      max-width: 300px;
+      opacity: 0;
       transition: opacity 1s ease;
+      line-height: 1.4;
     }
 
     #legal a {
@@ -93,30 +82,41 @@
       text-decoration: underline;
     }
 
-    .flower {
-      width: 80px;
-      margin-bottom: 20px;
+    #flower {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100vw;
+      z-index: 0;
+    }
+
+    @media (max-width: 768px) {
+      #form-wrapper {
+        top: auto;
+        bottom: 10vh;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+      }
+
+      form {
+        align-items: center;
+      }
+
+      #legal {
+        text-align: center;
+      }
     }
   </style>
 </head>
 <body>
-
-  <div class="top-section">
-    <div>17 &nbsp;&nbsp; 06 &nbsp;&nbsp; 25</div>
-    <div>ABBY.WORLD</div>
-    <div>7 RUE DE LA CALADE</div>
-    <div>CANNES</div>
-  </div>
-
-  <div>
-    <div class="title">ABBY.WORLD Cannes 2025</div>
-    <div class="time-slot">TUESDAY–WEDNESDAY</div>
-
-    <form id="signup-form">
-      <input type="email" class="input-line" name="email" required />
-      <button type="submit" class="signup-button">SIGN UP</button>
+  <div id="form-wrapper">
+    <form id="signup-form" action="https://formspree.io/f/xldjayre" method="POST">
+      <div class="input-wrapper">
+        <input type="email" name="email" id="email" required />
+      </div>
+      <button id="submit-button" type="submit">SIGN UP</button>
     </form>
-
     <div id="legal">
       By submitting this form, you consent to us processing your personal data to send you information about the event.
       We will not keep your data longer than necessary.
@@ -124,29 +124,56 @@
     </div>
   </div>
 
-  <img src="Abby_flower.png" alt="flower" class="flower" />
+  <img id="flower" src="Abby_flower.png" alt="flower graphic" />
 
   <script>
-    const form = document.getElementById('signup-form');
-    const button = form.querySelector('.signup-button');
-    const input = form.querySelector('.input-line');
-    const legal = document.getElementById('legal');
+    const form = document.getElementById("signup-form");
+    const email = document.getElementById("email");
+    const legal = document.getElementById("legal");
+    const button = document.getElementById("submit-button");
 
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      button.textContent = "THANK YOU";
-      button.classList.add("sent");
+    let fadeTimeout;
 
-      legal.style.opacity = 0;
-
-      setTimeout(() => {
-        input.value = "";
-        button.textContent = "SIGN UP";
-        button.classList.remove("sent");
-        legal.style.opacity = 1;
-      }, 2000);
+    email.addEventListener("focus", () => {
+      legal.style.opacity = 1;
     });
-  </script>
 
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const formData = new FormData(form);
+      fetch(form.action, {
+        method: "POST",
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      })
+      .then(response => {
+        if (response.ok) {
+          button.textContent = "THANK YOU";
+          button.classList.add("active");
+
+          fadeTimeout = setTimeout(() => {
+            legal.style.opacity = 0;
+            resetForm();
+          }, 2000);
+        } else {
+          button.textContent = "ERROR";
+        }
+      })
+      .catch(() => {
+        button.textContent = "ERROR";
+      });
+    });
+
+    function resetForm() {
+      setTimeout(() => {
+        form.reset();
+        button.textContent = "SIGN UP";
+        button.classList.remove("active");
+      }, 1000);
+    }
+  </script>
 </body>
 </html>
